access file system via rest api, and use the backyard db for gridfs
